Updated content and styling.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">International</span> Creative Union
+                    <i class="fa fa-play-circle"></i>  ICU – <span class="light">International</span> Creative Union
                 </a>
             </div>
 
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">International Creative Union</h1>
-                        <p class="intro-text">Integrated Projects and Dialogue of Cultures</p>
+                        <p class="intro-text">Integrated Projects &amp; Dialogue of Cultures</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,23 +90,23 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About International Creative Union</h2>
-                <p>International Creative Union is a place where <strong>10.000+</strong> professionals and people just interested in all kinds of natural sciences, architecture and art can meet.</p>
-                <p>We are a community with specialized groups for different directions. Some of them are represented – at the moment – as pages and groups on Facebook.</p>
-                <p>Pages:
-                    <ul>
-                        <li><a href="https://www.facebook.com/pages/TA-Creative-Alliance-Dialogue-of-Cultures/142873555784958">International Creative Union: DIALOGUE OF CULTURES</a>
-                        <li><a href="https://www.facebook.com/pages/NORGE-historie-kulturminne-arkutektur-kunst/158353427562862">International Creative Union: NORGE / HISTORIE &amp; KULTURMINNE, ARKUTEKTUR &amp; KUNST</a>
-                        <li><a href="https://www.facebook.com/pages/Thor-Heyerdahl-Тур-Хейердaл/123477997732539">International Creative Union: THOR HEYERDAHL / ТУР ХЕЙЕРДAЛ</a>
-                    </ul>
-                </p>
-                <p>Groups:
-                    <ul>
-                        <li><a href="https://www.facebook.com/groups/487303294647111/">International Creative Union: PROJECTS</a>
-                        <li><a href="https://www.facebook.com/groups/416957158323774/">International Creative Union: ФОТОСТАРИНА.</a>
-                        <li><a href="https://www.facebook.com/groups/341996669317865/">International Creative Union: МИР ГЛАЗАМИ БАКИНЦЕВ.</a>
-                        <li><a href="https://www.facebook.com/groups/752044768217202/">International Creative Union: АЗЕРБАЙДЖАН ГЛАЗАМИ ХУДОЖНИКОВ И ФОТОГРАФОВ.</a>
-                    </ul>
-                </p>
+                <p>International Creative Union is a place where <strong>10.000+</strong> professionals, <br/>
+                    and people just interested in all kinds of natural sciences, architecture, and art can meet.</p>
+                <p>We are a community with specialized groups for different directions. </br>
+                    Some of them are represented as pages and groups on Facebook.</p>
+                <p>Pages:</p>
+                <ul>
+                    <li><a href="https://www.facebook.com/pages/TA-Creative-Alliance-Dialogue-of-Cultures/142873555784958">International Creative Union: DIALOGUE OF CULTURES</a>
+                    <li><a href="https://www.facebook.com/pages/NORGE-historie-kulturminne-arkutektur-kunst/158353427562862">International Creative Union: NORGE / HISTORIE &amp; KULTURMINNE, ARKUTEKTUR &amp; KUNST</a>
+                    <li><a href="https://www.facebook.com/pages/Thor-Heyerdahl-Тур-Хейердaл/123477997732539">International Creative Union: THOR HEYERDAHL / ТУР ХЕЙЕРДAЛ</a>
+                </ul>
+                <p>Groups:</p>
+                <ul>
+                    <li><a href="https://www.facebook.com/groups/487303294647111/">International Creative Union: PROJECTS</a>
+                    <li><a href="https://www.facebook.com/groups/416957158323774/">International Creative Union: ФОТОСТАРИНА.</a>
+                    <li><a href="https://www.facebook.com/groups/341996669317865/">International Creative Union: МИР ГЛАЗАМИ БАКИНЦЕВ.</a>
+                    <li><a href="https://www.facebook.com/groups/752044768217202/">International Creative Union: АЗЕРБАЙДЖАН ГЛАЗАМИ ХУДОЖНИКОВ И ФОТОГРАФОВ.</a>
+                </ul>
             </div>
         </div>
     </section>
