--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About International Creative Union</h2>
                 <p>International Creative Union is a place where <strong>10.000+</strong> professionals, <br/>
-                    and people just interested in all kinds of natural sciences, architecture, and art can meet.</p>
+                    and people just interested in all kinds of natural sciences, architecture, <br/>
+                    and art can meet.</p>
                 <p>We are a community with specialized groups for different directions. </br>
                     Some of them are represented as pages and groups on Facebook.</p>
                 <p>Pages:</p>
@@ -130,7 +131,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact International Creative Union</h2>
                 <p>Feel free to contact us to provide some feedback and suggestions, or to just say hello!</p>
-                <!--<p><a href="mailto:feedback@startbootstrap.com">feedback@creativeunion.eu</a>-->
+                <!--<p><a href="mailto:feedback@creativeunion.eu">feedback@creativeunion.eu</a>-->
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
