--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <li>
                         <a href="https://www.facebook.com/groups/157697124344417/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
+                    <li>
+                        <a href="https://www.instagram.com/creativeunion.eu/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
