Updated social media links.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                         <a href="https://www.facebook.com/groups/157697124344417/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
+                        <a href="https://www.twitter.com/creativeunioneu/" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
                         <a href="https://www.instagram.com/creativeunion.eu/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                 </ul>
